Update backbone relational to official release

--- a/test/issues/issue34/issue34.html
+++ b/test/issues/issue34/issue34.html
@@ -30,7 +30,7 @@
 
   <script src="../../../vendor/test/jquery-1.9.1.js"></script>
   <script src="../../../knockback-core-stack.js"></script>
-  <script src="../../../vendor/optional/backbone-relational-0.8.0plus.js"></script>
+  <script src="../../../vendor/optional/backbone-relational-0.8.5.js"></script>
   <script src="issue34.js"></script>
 
 </body>
