--- a/test/backbone-relational/test-latest.html
+++ b/test/backbone-relational/test-latest.html
@@ -13,7 +13,7 @@
   <script type="text/javascript" src="../../lib/knockback-statistics.js"></script>
 
   <!-- HELPERS -->
-  <script type="text/javascript" src="../../vendor/optional/backbone-relational-0.8.0plus.js"></script>
+  <script type="text/javascript" src="../../vendor/optional/backbone-relational-0.8.5.js"></script>
 
   <!-- TESTS -->
   <link rel="stylesheet" href="../../vendor/test/qunit/qunit-1.11.0.css" type="text/css" media="screen" />
