--- a/test/issues/2013_04_04/issue_2013_04_04.html
+++ b/test/issues/2013_04_04/issue_2013_04_04.html
@@ -16,7 +16,7 @@
 
   <script src="../../../vendor/test/jquery-1.9.1.js"></script>
   <script src="../../../knockback-core-stack.js"></script>
-  <script src="../../../vendor/optional/backbone-relational-0.8.0plus.js"></script>
+  <script src="../../../vendor/optional/backbone-relational-0.8.5.js"></script>
   <script src="issue_2013_04_04.js"></script>
 
 </body>
