--- a/getting_started_knockback_basics.html
+++ b/getting_started_knockback_basics.html
@@ -5,22 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Getting Started: Knockback.js Basics</title>
-    <link rel="stylesheet" href="vendor/css/normalize.css">
-    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap-responsive.min.css">
-    <link rel="stylesheet" href="vendor/google-code-prettify/prettify.css">
-    <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/layout_components.css">
-    <script type="application/javascript" src="vendor/js/jquery-1.9.1.js"></script>
+    <link rel="stylesheet" href="./vendor/css/normalize.css">
+    <link rel="stylesheet" href="./vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./vendor/bootstrap/css/bootstrap-responsive.min.css">
+    <link rel="stylesheet" href="./vendor/google-code-prettify/prettify.css">
+    <link rel="stylesheet" href="./css/layout.css">
+    <link rel="stylesheet" href="./css/layout_components.css">
+    <link rel="icon" href="./img/favicon.png">
+    <script type="application/javascript" src="./vendor/js/jquery-1.9.1.js"></script>
     <link rel="stylesheet" href="css/tutorial.css">
     <script type="application/javascript" src="vendor/globalize/globalize.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.en-GB.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.fr-FR.js"></script>
     <script type="application/javascript" src="vendor/js/knockback-full-stack-0.17.2.js"></script>
-    <script type="application/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script type="application/javascript" src="vendor/google-code-prettify/prettify.js"></script>
-    <script type="application/javascript" src="js/stylecode.js"></script>
-    <script type="application/javascript" src="js/interface.js"></script>
+    <script type="application/javascript" src="./vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script type="application/javascript" src="./vendor/google-code-prettify/prettify.js"></script>
+    <script type="application/javascript" src="./js/stylecode.js"></script>
+    <script type="application/javascript" src="./js/interface.js"></script>
   </head>
   <body>
     <div class="page navbar">
