--- a/tutorial_knockback_inspector.html
+++ b/tutorial_knockback_inspector.html
@@ -5,22 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Knockback-Inspector.js</title>
-    <link rel="stylesheet" href="vendor/css/normalize.css">
-    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap-responsive.min.css">
-    <link rel="stylesheet" href="vendor/google-code-prettify/prettify.css">
-    <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/layout_components.css">
-    <script type="application/javascript" src="vendor/js/jquery-1.9.1.js"></script>
+    <link rel="stylesheet" href="./vendor/css/normalize.css">
+    <link rel="stylesheet" href="./vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./vendor/bootstrap/css/bootstrap-responsive.min.css">
+    <link rel="stylesheet" href="./vendor/google-code-prettify/prettify.css">
+    <link rel="stylesheet" href="./css/layout.css">
+    <link rel="stylesheet" href="./css/layout_components.css">
+    <link rel="icon" href="./img/favicon.png">
+    <script type="application/javascript" src="./vendor/js/jquery-1.9.1.js"></script>
     <link rel="stylesheet" href="css/tutorial.css">
     <script type="application/javascript" src="vendor/globalize/globalize.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.en-GB.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.fr-FR.js"></script>
     <script type="application/javascript" src="vendor/js/knockback-full-stack-0.17.2.js"></script>
-    <script type="application/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script type="application/javascript" src="vendor/google-code-prettify/prettify.js"></script>
-    <script type="application/javascript" src="js/stylecode.js"></script>
-    <script type="application/javascript" src="js/interface.js"></script>
+    <script type="application/javascript" src="./vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script type="application/javascript" src="./vendor/google-code-prettify/prettify.js"></script>
+    <script type="application/javascript" src="./js/stylecode.js"></script>
+    <script type="application/javascript" src="./js/interface.js"></script>
   </head>
   <body>
     <div class="page navbar">
@@ -341,7 +342,7 @@
   &lt;!-- DEPENDENCIES --&gt;
   &lt;script src='vendor/jquery-1.9.1.js'&gt;&lt;/script&gt;
   &lt;script src='vendor/knockback-core-stack-0.17.2.js'&gt;&lt;/script&gt;
-  &lt;script src='vendor/backbone-relational-0.8.0plus.js'&gt;&lt;/script&gt;
+  &lt;script src='vendor/backbone-relational-0.8.5.js'&gt;&lt;/script&gt;
   
   &lt;!-- APPLICATION STYLING --&gt;
   &lt;style type='text/css'&gt;
@@ -427,7 +428,7 @@ this.kbi.VERSION = '0.1.0';</pre>
   &lt;!-- DEPENDENCIES --&gt;
   &lt;script src='vendor/jquery-1.9.1.js'&gt;&lt;/script&gt;
   &lt;script src='vendor/knockback-core-stack-0.17.2.js'&gt;&lt;/script&gt;
-  &lt;script src='vendor/backbone-relational-0.8.0plus.js'&gt;&lt;/script&gt;
+  &lt;script src='vendor/backbone-relational-0.8.5.js'&gt;&lt;/script&gt;
   
   &lt;!-- KNOCKBACK-INSPECTOR LIBRARY --&gt;
   &lt;script src='js/lib/kbi_core.js'&gt;&lt;/script&gt;
