--- a/components_knockback_inspector.html
+++ b/components_knockback_inspector.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./vendor/google-code-prettify/prettify.css">
     <link rel="stylesheet" href="./css/layout.css">
     <link rel="stylesheet" href="./css/layout_components.css">
-    <link rel="icon" href="./img/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
     <script type="application/javascript" src="./vendor/js/jquery-1.9.1.js"></script>
     <link rel="stylesheet" href="css/tutorial.css">
     <script type="application/javascript" src="./vendor/bootstrap/js/bootstrap.min.js"></script>
