Got tests to pass with latest modules

--- a/test/issues/issue40/require_fixed.html
+++ b/test/issues/issue40/require_fixed.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <script src="require.js"></script>
+  <script src="require-2.1.9.js"></script>
   <script type="text/javascript">
     /**
 
