--- a/test/knockback-formatting/test-latest-amd.html
+++ b/test/knockback-formatting/test-latest-amd.html
@@ -5,7 +5,7 @@
   <title>Knockback Formatting Test Suite (AMD)</title>
 
   <!-- TESTS -->
-  <script src="../../vendor/test/require.js"></script>
+  <script src="../../vendor/test/require-2.1.9.js"></script>
   <link rel="stylesheet" href="../../vendor/test/qunit/qunit-1.11.0.css" type="text/css" media="screen" />
   <script type="text/javascript" src="../../vendor/test/jquery-1.10.2.js"></script>
   <script type="text/javascript" src="../../vendor/test/qunit/qunit-1.11.0.js"></script>
