--- a/test/backbone-modelref/test-legacy.html
+++ b/test/backbone-modelref/test-legacy.html
@@ -4,7 +4,7 @@
 <head>
   <title>Knockback with Backbone.ModelRef Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../vendor/knockout-1.2.1.debug.js"></script>
+  <script type="text/javascript" src="../../vendor/knockout-1.2.1.js"></script>
   <script type="text/javascript" src="../../vendor/underscore-1.1.7.js"></script>
   <script type="text/javascript" src="../../vendor/backbone-0.5.1.js"></script>
 
@@ -14,7 +14,7 @@
   <script type="text/javascript" src="../../lib/knockback-statistics.js"></script>
 
   <!-- HELPERS -->
-  <script type="text/javascript" src="../../vendor/optional/backbone-modelref-0.1.5.js"></script>
+  <script type="text/javascript" src="../../vendor/optional/backbone-modelref/backbone-modelref-0.1.5.js"></script>
 
   <!-- TESTS -->
   <link rel="stylesheet" href="../../vendor/test/qunit/qunit-1.11.0.css" type="text/css" media="screen" />
