--- a/test/knockback-defaults/test-legacy.html
+++ b/test/knockback-defaults/test-legacy.html
@@ -4,7 +4,7 @@
 <head>
   <title>Knockback.Observable Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../vendor/knockout-1.2.1.debug.js"></script>
+  <script type="text/javascript" src="../../vendor/knockout-1.2.1.js"></script>
   <script type="text/javascript" src="../../vendor/underscore-1.1.7.js"></script>
   <script type="text/javascript" src="../../vendor/backbone-0.5.1.js"></script>
 
@@ -15,7 +15,7 @@
   <script type="text/javascript" src="../../lib/knockback-statistics.js"></script>
 
   <!-- HELPERS -->
-  <script type="text/javascript" src="../../vendor/optional/backbone-modelref-0.1.5.js"></script>
+  <script type="text/javascript" src="../../vendor/optional/backbone-modelref/backbone-modelref-0.1.5.js"></script>
   <script type="text/javascript" src="../../test/_examples/build/_localization_examples.js"></script>
   <script type="text/javascript" src="../../vendor/test/globalize/globalize.js"></script>
   <script type="text/javascript" src="../../vendor/test/globalize/globalize.culture.en-GB.js"></script>
