--- a/test/knockback-localization/test-legacy.html
+++ b/test/knockback-localization/test-legacy.html
@@ -4,7 +4,7 @@
 <head>
   <title>Knockback.LocalizedObservable Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../vendor/knockout-1.2.1.debug.js"></script>
+  <script type="text/javascript" src="../../vendor/knockout-1.2.1.js"></script>
   <script type="text/javascript" src="../../vendor/underscore-1.1.7.js"></script>
   <script type="text/javascript" src="../../vendor/backbone-0.5.1.js"></script>
 
