--- a/test/ecosystem/parse/test-latest.html
+++ b/test/ecosystem/parse/test-latest.html
@@ -2,7 +2,7 @@
 <html>
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
-  <title>Knockback.CollectionObservable Test Suite</title>
+  <title>Parse Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
   <script type="text/javascript" src="../../../vendor/knockout-3.0.0.js"></script>
   <script type="text/javascript" src="../../../vendor/optional/parse/parse-1.2.0.js"></script>
@@ -38,7 +38,7 @@
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback.CollectionObservable Test Suite</h1>
+    <h1 id="qunit-header">Parse Test Suite</h1>
     <div id='mocha'></div>
   </div>
 </body>
