Enabled recursive inject: https://github.com/kmalakoff/knockback/issues/63

--- a/test/full-stack/test-bundle-lodash-core.html
+++ b/test/full-stack/test-bundle-lodash-core.html
@@ -23,6 +23,7 @@
   <script type="text/javascript" src="../knockback/collection-observable/build/test.js"></script>
   <script type="text/javascript" src="../knockback/observable/build/test.js"></script>
   <script type="text/javascript" src="../knockback/view-model/build/test.js"></script>
+  <script type="text/javascript" src="../knockback/inject/build/test.js"></script>
 </head>
 <body>
   <div>
