--- a/test/full-stack/test-latest-core.html
+++ b/test/full-stack/test-latest-core.html
@@ -26,6 +26,7 @@
   <script type="text/javascript" src="../knockback/collection-observable/build/test.js"></script>
   <script type="text/javascript" src="../knockback/observable/build/test.js"></script>
   <script type="text/javascript" src="../knockback/view-model/build/test.js"></script>
+  <script type="text/javascript" src="../knockback/inject/build/test.js"></script>
 </head>
 <body>
   <div>
