Got Backbone.Associations tests to pass

--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -29,6 +29,8 @@
 
     <iframe src="ecosystem/backbone-modelref/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="ecosystem/backbone-relational/test-latest.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="ecosystem/backbone-associations/test-latest.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="ecosystem/supermodel/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="ecosystem/backbone-orm/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="ecosystem/lodash/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="ecosystem/parse/test-latest.html" scrolling="auto" frameborder="0"></iframe>
