--- a/tutorial_knockback_inspector.html
+++ b/tutorial_knockback_inspector.html
@@ -17,7 +17,7 @@
     <script type="application/javascript" src="vendor/globalize/globalize.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.en-GB.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.fr-FR.js"></script>
-    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.17.2.js"></script>
+    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.18.1.js"></script>
     <script type="application/javascript" src="./vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="./vendor/google-code-prettify/prettify.js"></script>
     <script type="application/javascript" src="./js/stylecode.js"></script>
@@ -72,7 +72,7 @@
           <p>This tutorial shows how to create an inspector for a Backbone.Model or a Backbone.Collection that you can embed in your website for debugging purposes. For a model, the inspector allows you to view and edit its attributes including nested models and collections; for a collection, the inspector allows you to view and edit its models.</p>
           <p><span><strong>Note:</strong> because this is an intermediate tutorial, you should already have reviewed the</span><a href="tutorials_introduction.html"> Tutorial Introduction</a><span> before attempting this one.</span></p>
           <h3>Try out the Knockback-Inspector:</h3>
-          <iframe style="width: 100%; height: 450px" src="http://jsfiddle.net/kmalakoff/FRhEV/embedded/result,js,html,resources/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+          <iframe style="width: 100%; height: 450px" src="http://jsfiddle.net/kmalakoff/FRhEV/embedded/result" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
           <p></p>
           <p><span>Although the inspector can be useful as presented in this tutorial, this version is simple and stripped down for learning purposes (the tutorial may not match the live demo).</span></p>
           <p><span>Please download</span><a href="https://github.com/kmalakoff/knockback-inspector/"> the Knockout-Inspector project from GitHub</a><span> and follow along with each step of this tutorial in the /tutorials/step folder.</span></p>
@@ -341,8 +341,8 @@
   
   &lt;!-- DEPENDENCIES --&gt;
   &lt;script src='vendor/jquery-1.9.1.js'&gt;&lt;/script&gt;
-  &lt;script src='vendor/knockback-core-stack-0.17.2.js'&gt;&lt;/script&gt;
-  &lt;script src='vendor/backbone-relational-0.8.5.js'&gt;&lt;/script&gt;
+  &lt;script src='vendor/knockback-core-stack-0.18.1.js'&gt;&lt;/script&gt;
+  &lt;script src='vendor/backbone-relational-0.8.6.js'&gt;&lt;/script&gt;
   
   &lt;!-- APPLICATION STYLING --&gt;
   &lt;style type='text/css'&gt;
@@ -427,8 +427,8 @@ this.kbi.VERSION = '0.1.0';</pre>
   
   &lt;!-- DEPENDENCIES --&gt;
   &lt;script src='vendor/jquery-1.9.1.js'&gt;&lt;/script&gt;
-  &lt;script src='vendor/knockback-core-stack-0.17.2.js'&gt;&lt;/script&gt;
-  &lt;script src='vendor/backbone-relational-0.8.5.js'&gt;&lt;/script&gt;
+  &lt;script src='vendor/knockback-core-stack-0.18.1.js'&gt;&lt;/script&gt;
+  &lt;script src='vendor/backbone-relational-0.8.6.js'&gt;&lt;/script&gt;
   
   &lt;!-- KNOCKBACK-INSPECTOR LIBRARY --&gt;
   &lt;script src='js/lib/kbi_core.js'&gt;&lt;/script&gt;
