--- a/index.html
+++ b/index.html
@@ -104,8 +104,11 @@
                 <h2>Components</h2>
                 <p>Knockback is compatible with the following components:</p>
                 <ul>
-                  <li><a href="https://github.com/PaulUithol/Backbone-relational/">Backbone-Relational</a></li>
-                  <li><a href="https://www.parse.com/">Parse <strong>(new!)</strong></a></li>
+                  <li><a href="http://vidigami.github.io/backbone-orm/">BackboneORM <strong>(new!)</strong></a></li>
+                  <li><a href="http://backbonerelational.org/">Backbone-Relational</a></li>
+                  <li><a href="http://dhruvaray.github.io/backbone-associations/">Backbone Associations <strong>(new!)</strong></a></li>
+                  <li><a href="http://pathable.github.io/supermodel/">Supermodel.js <strong>(new!)</strong></a></li>
+                  <li><a href="https://www.parse.com/">Parse</a></li>
                   <li><a href="https://github.com/kmalakoff/backbone-modelref">Backbone-ModelRef</a></li>
                   <li><a href="https://github.com/kmalakoff/knockback-inspector">Knockback-Inspector</a></li>
                   <li><a href="https://github.com/kmalakoff/knockback-navigators/">Knockback-Navigators</a></li>
@@ -114,7 +117,7 @@
             </div>
             <div class="content row">
               <div class="span7 wrapped">
-                <h2>Download Latest <small>0.17.2</small></h2>
+                <h2>Download Latest <small>0.18.1</small></h2>
                 <table class="table">
                   <thead>
                     <tr>
@@ -128,14 +131,14 @@
                       <td>Full</td>
                       <td>
                         <ul>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.17.2/knockback.js'>Development</a> <small>(dev, 82k)</small></li>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.17.2/knockback.min.js'>Production</a> <small>(min+gzip, 13k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.18.1/knockback.js'>Development</a> <small>(dev, 82k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.18.1/knockback.min.js'>Production</a> <small>(min+gzip, 13k)</small></li>
                         </ul>
                       </td>
                       <td>
                         <ul>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.17.2/knockback-full-stack.js'>Development</a> <small>(dev, 363k)</small></li>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.17.2/knockback-full-stack.min.js'>Production</a> <small>(min+gzip, 39k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.18.1/knockback-full-stack.js'>Development</a> <small>(dev, 363k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.18.1/knockback-full-stack.min.js'>Production</a> <small>(min+gzip, 39k)</small></li>
                         </ul>
                       </td>
                     </tr>
@@ -143,14 +146,14 @@
                       <td>Core</td>
                       <td>
                         <ul>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.17.2/knockback-core.js'>Development</a> <small>(dev, 62k)</small></li>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.17.2/knockback-core.min.js'>Production</a> <small>(min+gzip, 10k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.18.1/knockback-core.js'>Development</a> <small>(dev, 62k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.18.1/knockback-core.min.js'>Production</a> <small>(min+gzip, 10k)</small></li>
                         </ul>
                       </td>
                       <td>
                         <ul>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.17.2/knockback-core-stack.js'>Development</a> <small>(dev, 343k)</small></li>
-                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.17.2/knockback-core-stack.min.js'>Production</a> <small>(min+gzip, 36k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.18.1/knockback-core-stack.js'>Development</a> <small>(dev, 343k)</small></li>
+                          <li><a href='https://raw.github.com/kmalakoff/knockback/0.18.1/knockback-core-stack.min.js'>Production</a> <small>(min+gzip, 36k)</small></li>
                         </ul>
                       </td>
                     </tr>
