--- a/index.html
+++ b/index.html
@@ -166,9 +166,10 @@
               </div>
               <div class="span3"><h2>Distributions</h2>
 <ul>
-<li><a href="http://search.npmjs.org/#/knockback">npm registry</a></li>
+<li><a href="https://npmjs.org/package/knockback">npm registry</a></li>
 <li><a href="http://nuget.org/packages/Knockback.js">NuGet Gallery</a></li>
 <li><a href="http://sindresorhus.com/bower-components/">Bower</a></li>
+<li><a href="http://jamjs.org/packages/#/details/knockback">Jam</a></li>
 </ul>
 <h2>Source</h2>
 <p>You can find the source on <a href="https://github.com/kmalakoff/knockback">Github</a>. To provide feedback leave a message or <a href="https://github.com/kmalakoff/knockback/issues">create an issue</a>.</p>
